--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.16.4",
     "iview": "^3.0.0",
     "mongoose": "^5.4.5",
+    "particles.js": "^2.0.0",
     "vue": "^2.5.16",
     "vue-router": "^2.8.1"
   },
@@ -28,11 +29,12 @@
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-runtime": "^6.12.0",
     "babel-preset-es2015": "^6.9.0",
+    "babel-preset-stage-2": "^6.24.1",
     "babel-runtime": "^6.11.6",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.8.5",
-    "html-loader": "^0.3.0",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.28.0",
     "iview-loader": "^1.2.1",
     "less": "^2.7.1",
