--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "iview": "^3.0.0",
     "mongoose": "^5.4.5",
     "particles.js": "^2.0.0",
+    "qiniu": "^7.2.1",
     "vue": "^2.5.16",
-    "vue-router": "^2.8.1"
+    "vue-router": "^2.8.1",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "autoprefixer-loader": "^2.0.0",
