--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "iview": "^3.0.0",
+    "mavon-editor": "^2.6.17",
     "mongoose": "^5.4.5",
     "particles.js": "^2.0.0",
     "qiniu": "^7.2.1",
